--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,16 @@
 	    <artifactId>pagehelper</artifactId>
 	    <version>4.1.1</version>
 	</dependency>
+	<dependency>
+    <groupId>commons-net</groupId>
+	    <artifactId>commons-net</artifactId>
+	    <version>3.3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.camel</groupId>
+		<artifactId>camel-ftp</artifactId>
+		<version>2.13.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>jyty</finalName>
